[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rasa-calm-demo"
version = "2.0.0"
description = "A starter point for exploring CALM."
authors = [ "Tom Bocklisch <tmbo@rasa.com>",]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "rasa-pro"
url = "https://europe-west3-python.pkg.dev/rasa-releases/rasa-pro-python/simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[tool.poetry.dependencies.rasa-pro]
version = "3.11.0a3"
allow-prereleases = true

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
